@startuml

Class NodeController
{
    {method} - Setup() : void 
    {method} - Loop() : void
    {method} + Run() : void
}


class SPI {
   {method} + Transfer(data: byte) : int
}

interface IWriter {
    {abstract} + write(dataSize : size_t, data : char[]) : int
}

class MFRC522Writer {
    {method}  + MFRC522Writer(NFCModule& nfc)
}

NodeController "1" o-- "1" IWriter

IWriter <|.. MFRC522Writer
MFRC522Writer "1" o-- "1" SPI

@enduml